crates/usfm_semantic/tests/snapshots/checks__verse_in_character_style.snap
---
source: crates/usfm_semantic/tests/checks.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 \\wj a \\v 2 b\\wj* c"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..39
  VerseStart 1@16..20
  Char wj@21..37
    Text "a"@25..27
    VerseEnd 1
    Text " "
    VerseStart 2@27..31
    Text "b"@32..33
  Text " c"@37..39
  VerseEnd 2
ChapterEnd 1
--- diagnostics
warning[verse-in-character-style] @27..31: `\v` inside an open character style
