crates/usfm_semantic/tests/snapshots/checks__verse_in_heading.snap
---
source: crates/usfm_semantic/tests/checks.rs
description: "\\id GEN\n\\c 1\n\\s1 \\v 1 heading\n\\p a"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para s1@13..30
  VerseStart 1@17..21
  Text "heading"@22..30
Para p@30..34
  Text "a"@33..34
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[verse-in-heading] @17..21: `\v` inside a title or section heading
