crates/usfm_semantic/tests/snapshots/checks__verse_out_of_order.snap
---
source: crates/usfm_semantic/tests/checks.rs
description: "\\id GEN\n\\c 1\n\\p \\v 6 a \\v 7a b \\v 5 c"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..37
  VerseStart 6@16..20
  Text "a"@21..23
  VerseEnd 6
  Text " "
  VerseStart 7a@23..28
  Text "b"@29..31
  VerseEnd 7a
  Text " "
  VerseStart 5@31..35
  Text "c"@36..37
  VerseEnd 5
ChapterEnd 1
--- diagnostics
warning[verse-out-of-order] @31..35: verse 5 comes after verse 7a in chapter 1
