crates/usfm_semantic/tests/snapshots/checks__verse_outside_chapter.snap
---
source: crates/usfm_semantic/tests/checks.rs
description: "\\id GEN\n\\p \\v 1 a"
---
Book GEN "" @0..7
Para p@8..17
  VerseStart 1@11..15
  Text "a"@16..17
  VerseEnd 1
--- diagnostics
error[verse-text-before-chapter] @8..17: `\p` (verse text) before the first `\c`
error[verse-outside-chapter] @11..15: `\v` before any `\c`
