crates/usfm_semantic/tests/snapshots/checks__verse_text_before_chapter.snap
---
source: crates/usfm_semantic/tests/checks.rs
description: "\\id GEN\n\\ip intro\n\\p body\n\\c 1\n\\p \\v 1 a"
---
Book GEN "" @0..7
Para ip@8..18
  Text "intro"@12..18
Para p@18..26
  Text "body"@21..26
ChapterStart 1@26..30
Para p@31..40
  VerseStart 1@34..38
  Text "a"@39..40
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[verse-text-before-chapter] @18..26: `\p` (verse text) before the first `\c`
